logs/validate.20260408-050618.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/LinProbFlatHashTableStEph.rs:478:46
    |
478 | ...                   implies !#[trigger] table.table@[j].spec_entry_to_map().dom().contains(*key) by {
    |                                ^

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:885:30
    |
885 |     impl std::fmt::Debug for LinProbFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:891:32
    |
891 |     impl std::fmt::Display for LinProbFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 3350MB, peak z3 RSS: 87MB, min free: 23167MB
Sampled CPU Usage: rust_verify: 46s, z3 children: 18s
